# gitpa

./: .coverage  .gitignore  .python-version  LICENSE.md  Makefile  README.md  gitpa.code-workspace  index.html
gitp-acolyte/: .gitignore  .python-version  Makefile  README.md  pyproject.toml
gitp-acolyte/gitp_acolyte/: constants.py
gitp-acolyte/gitp_acolyte/ceremonial/: README.md
gitp-acolyte/gitp_acolyte/ceremonial/grimoire/: README.md
gitp-acolyte/gitp_acolyte/ceremonial/offering/: README.md
gitp-acolyte/gitp_acolyte/ceremonial/spells/: create_episode_data.py
gitp-acolyte/gitp_acolyte/ceremonial/spells/episode_data/: args.py  create.py  update.py
gitp-acolyte/gitp_acolyte/ceremonial/spells/episode_data/update/file_attrs/: update_file_attrs.py  update_file_attrs_prompt.md  update_file_attrs_system_prompt.md  update_file_attrs_user_prompt.md
gitp-acolyte/gitp_acolyte/ceremonial/spells/episode_page/: create_episode_page.py  episode.jinja  episode.yml  episode_output.md
gitp-acolyte/gitp_acolyte/ceremonial/spells/episode_reference/: .gitignore  constants.py  episode_schema.py  reference_episode.yml
gitp-acolyte/gitp_acolyte/ceremonial/spells/episode_reference/ref_ep_dir/: .gitignore  GP.2024.12.04.A.mfpz  GP.2024.12.04.microfreak.mid  episode.yml
gitp-acolyte/gitp_acolyte/ceremonial/spells/recording/files/: pub_rec_files.py  rec_file_constants.py
gitp-acolyte/gitp_acolyte/utils/ai/: test_openai.py  test_openai_structured_outputs.py
gitp-acolyte/tests/ceremonial/spells/recording/files/: test_pub_rec_files.py
gp-acolyte/: README.md  pyproject.toml
(+38 files in other folders)
